# jerryscript-port

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  jerryscript 移植到 Zephyr.xmind
cmake/: jerry.cmake  mylib.cmake
mylib/: CMakeLists.txt
src/: main.c
